fix img/iframe padding on ios

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -220,6 +220,7 @@ figure {
         filter: drop-shadow(0 0 3pt transparentize(#575f66, 0.8));
         width: auto;
         height: auto;
+        padding: 0;
     }
 
     a,
